--- a/index.html
+++ b/index.html
@@ -18,69 +18,85 @@
   <div id="confetti-container">
     <section class="container">
       <div class=topContainer>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Logo_of_Family_Feud.png" alt="logo"
-          class="logo" />
-        <div class=innerContainer>
-          <button class="button topButton questionButton hoverChange is-info is-dark is-medium" onclick="submit()">New
-            Question </button>
-          <div class=" button topButton team1 scoreButton hoverChange is-info is-dark  is-medium" onclick="points()">
-            Team 1 Total Score: 0 </div>
-          <div class=" button topButton team2 scoreButton hoverChange is-info is-dark is-medium" onclick="points()">
-            Team 2 Total Score: 0 </div>
-          <div class="  button topButton roundScore scoreButton hoverChange is-info is-dark is-medium"> Round Score: 0
-          </div>
-          <div class=" button topButton guessesLeft scoreButton hoverChange is-info is-dark is-medium"> Guesses Left: 3
-          </div>
-          <div class=" button topButton endGame scoreButton hoverChange is-info is-dark is-medium"> End Game </div>
-        </div>
-      </div>
-    </section>
-    <br>
-    <section class=" container">
-      <div class="board-item">
-        <div class="questionBox board-item-content"><span> Click the New Question button to play!</span< /div>
-        </div>
-    </section>
-    <div class="horizontalPosition">
+      <div class="horizontalPosition">
       <section class="timerArea">
         <div class="btnGroup">
           <span>
             <span class="timer">
               <span>
-                <div class=" button is-info is-light is-medium counter" id="counter"> Time Left: <br> 1:00 </div>
+                <div class=" " id="counter"> Time Left: <br> 1:00 </div>
               </span>
+              <span><button class="button" onclick="playPause()">⏯️</button></span>
             </span>
           </span>
         </div>
       </section>
-      <section class="container  answerArea">
-        <div class="level-item ">
-          <div class="columns is-multiline is-centered cards-container" id="sectioncontainer">
-            <div class="column is-narrow">
-              <article class="message is-info is-dark answerCards">
-                <div class="board-item">
-                  <div class="board-item-content" id="box"><span class="hidden answer" id="0"> Answer 1 </span> </div>
-                </div>
-                <div class="board-item">
-                  <div class="board-item-content" id="box"><span class="hidden answer" id="1"> Answer 2 </span></div>
-                </div>
-                <div class="board-item">
-                  <div class="board-item-content" id="box"><span class="hidden answer" id="2"> Answer 3 </span></div>
-                </div>
-                <div class="board-item">
-                  <div class="board-item-content" id="box"><span class="hidden answer" id="3">Answer 4</span></div>
-                </div>
-                <div class="board-item">
-                  <div class="board-item-content" id="box"><span class="hidden answer" id="4">Answer 5</span></div>
-                </div>
-                <div class="board-item">
-                  <div class="board-item-content" id="box"><span class="hidden answer" id="5">Answer 6</span></div>
-                </div>
-              </article>
+    </div>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Logo_of_Family_Feud.png" alt="logo"
+          class="logo" />
+      </div>
+    </section>
+    <br>
+    <section class=" container">
+      <div class="board-item">
+        <div class="questionBox board-item-content">
+          <span> Click the New Question button to play!</span>
+          <button id="nextQuestion">→</button>
+        </div>
+        </div>
+    </section>
+    <section class="container  answerArea">
+      <div class="level-item ">
+        <div>
+          <div id="atticVPs">attic VPs</div>
+          <div class="is-flex" style="gap: 10px;">
+            <div class="team-avatar">
+              <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+            </div>
+            <div class="team-avatar">
+              <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
             </div>
           </div>
-      </section>
-    </div>
+        </div>
+
+        <div class="columns is-multiline is-centered cards-container" id="sectioncontainer">
+          <div class="column is-narrow">
+            <article class="message is-info is-dark answerCards">
+              <div class="board-item">
+                <div class="board-item-content" id="box"><span class="hidden answer" id="0"> Answer 1 </span> </div>
+              </div>
+              <div class="board-item">
+                <div class="board-item-content" id="box"><span class="hidden answer" id="1"> Answer 2 </span></div>
+              </div>
+              <div class="board-item">
+                <div class="board-item-content" id="box"><span class="hidden answer" id="2"> Answer 3 </span></div>
+              </div>
+              <div class="board-item">
+                <div class="board-item-content" id="box"><span class="hidden answer" id="3">Answer 4</span></div>
+              </div>
+              <div class="board-item">
+                <div class="board-item-content" id="box"><span class="hidden answer" id="4">Answer 5</span></div>
+              </div>
+              <div class="board-item">
+                <div class="board-item-content" id="box"><span class="hidden answer" id="5">Answer 6</span></div>
+              </div>
+            </article>
+          </div>
+        </div>
+        <div>
+        <div id="basementVPs">basement VPs</div>
+        <div class="is-flex" style="gap: 10px;">
+          <div class="team-avatar">
+            <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+          </div>
+          <div class="team-avatar">
+            <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+          </div>
+        </div>
+      </div>
+
+    </section>
+
     <br>
     <div class="horizontalPosition">
       <section class="hero ">
@@ -90,9 +106,9 @@
         </form>
       </section>
       <br>
-      <section>
+      <!-- <section>
         <button id="submitButton" class="button is-info is-light" onclick="team()"> Submit Guess </button>
-      </section>
+      </section> -->
     </div>
     <h3 id="incorrectAnswerResponse" class="hidden"> Your guess is incorrect </h3>
     <br>
@@ -100,6 +116,7 @@
     
     <script src="./script.js" defer></script>
   </div>
+
 </body>
 
 
