game guessing state and score keeping

--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <section class="container  answerArea">
       <div class="level-item ">
         <div>
-          <div id="atticVPs">attic VPs</div>
+          <div id="atticVPs" class="active-team">
+            Attic VPs: <span class="team1-score">0</span>
+          </div>
           <div class="is-flex" style="gap: 10px;">
             <div class="team-avatar">
               <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
@@ -96,7 +98,9 @@
           </div>
         </div>
         <div>
-          <div id="basementVPs">basement VPs</div>
+          <div id="basementVPs">
+            Basement VPs: <span class="team2-score">0</span>
+          </div>
           <div class="is-flex" style="gap: 10px;">
             <div class="team-avatar">
               <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
