playing team is highlighted

--- a/index.html
+++ b/index.html
@@ -60,15 +60,20 @@
     <section class="container  answerArea">
       <div class="level-item ">
         <div>
-          <div id="atticVPs" class="active-team">
-            Attic VPs: <span class="team1-score">0</span>
-          </div>
-          <div class="is-flex" style="gap: 10px;">
-            <div class="team-avatar">
-              <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+          <div class="team-section" id="team1Section">
+            <div class="team-name" id="atticVPs">
+              Attic VPs
             </div>
-            <div class="team-avatar">
-              <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+            <div class="avatar-container">
+              <div class="team-avatar">
+                <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+              </div>
+              <div class="team-avatar">
+                <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+              </div>
+            </div>
+            <div class="team-score">
+              <span class="team1-score">0</span>
             </div>
           </div>
         </div>
@@ -98,15 +103,20 @@
           </div>
         </div>
         <div>
-          <div id="basementVPs">
-            Basement VPs: <span class="team2-score">0</span>
-          </div>
-          <div class="is-flex" style="gap: 10px;">
-            <div class="team-avatar">
-              <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+          <div class="team-section" id="team2Section">
+            <div class="team-name" id="basementVPs">
+              Basement VPs
             </div>
-            <div class="team-avatar">
-              <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+            <div class="avatar-container">
+              <div class="team-avatar">
+                <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+              </div>
+              <div class="team-avatar">
+                <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+              </div>
+            </div>
+            <div class="team-score">
+              <span class="team2-score">0</span>
             </div>
           </div>
         </div>
