added modal and answer revealzing

--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 </head>
 
 <body>
+  <div class="modal-background">
+    <div class="modal-content">
+      <span class="modal-close">&times;</span>
+      <h2>Round Over!</h2>
+      <button class="button is-primary" id="modalOkButton">OK</button>
+    </div>
+  </div>
   <div id="confetti-container">
     <section class="container">
       <div class=topContainer>
