fix the thingie

--- a/index.html
+++ b/index.html
@@ -89,22 +89,22 @@
           <div class="column is-narrow">
             <article class="message is-info is-dark answerCards">
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="0"> Answer 1 </span> </div>
+                <div class="board-item-content" id="box"><span class="hidden answer" id="0">  </span> </div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="1"> Answer 2 </span></div>
+                <div class="board-item-content" id="box"><span class="hidden answer" id="1">  </span></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="2"> Answer 3 </span></div>
+                <div class="board-item-content" id="box"><span class="hidden answer" id="2">  </span></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="3">Answer 4</span></div>
+                <div class="board-item-content" id="box"><span class="hidden answer" id="3"></span></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="4">Answer 5</span></div>
+                <div class="board-item-content" id="box"><span class="hidden answer" id="4"></span></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="5">Answer 6</span></div>
+                <div class="board-item-content" id="box"><span class="hidden answer" id="5"></span></div>
               </div>
             </article>
           </div>
