--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
             </div>
             <div class="avatar-container">
               <div class="team-avatar">
-                <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+                <img src="https://ca.slack-edge.com/T041X66AJ-U06CQ3K63QR-1882d0f16642-512" alt="Attic VP Team Member 1" class="team-image">
               </div>
               <div class="team-avatar">
-                <img src="path/to/team1-image.jpg" alt="Team 1" class="team-image">
+                <img src="https://ca.slack-edge.com/T041X66AJ-U07DV4RK3BP-33a9e8caf1e8-512" alt="Attic VP Team Member 2" class="team-image">
               </div>
             </div>
             <div class="team-score">
@@ -116,10 +116,10 @@
             </div>
             <div class="avatar-container">
               <div class="team-avatar">
-                <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+                <img src="https://ca.slack-edge.com/T041X66AJ-U01HN4982KD-c60dbacf8c8d-512" alt="Basement VP Team Member 1" class="team-image">
               </div>
               <div class="team-avatar">
-                <img src="path/to/team2-image.jpg" alt="Team 2" class="team-image">
+                <img src="https://ca.slack-edge.com/T041X66AJ-U01PP23N42F-33c796cb2888-512" alt="Basement VP Team Member 2" class="team-image">
               </div>
             </div>
             <div class="team-score">
