timer play pause functionality

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Family Fued!</title>
+  <title>Floor Feud!</title>
   <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
   <!-- Bulma Version 0.9.0-->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Work+Sans&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
               <span>
                 <span class="timer">
                   <span>
-                    <div class=" " id="counter"> Time Left: <br> 1:00 </div>
+                    <div class=" " id="counter"> Time Left: <br> 20 </div>
                   </span>
                   <span><button class="button" onclick="playPause()">⏯️</button></span>
                 </span>
