edit play/pause button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                   <span>
                     <div class=" " id="counter"> Time Left: <br> 20 </div>
                   </span>
-                  <span><button class="button" onclick="playPause()">⏯️</button></span>
+                  <span><button class="button" onclick="playPause()">▶️</button></span>
                 </span>
               </span>
             </div>
