--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
           </section>
         </div>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Logo_of_Family_Feud.png" alt="logo"
+        <img src="img/FloorFeudLogo.png" alt="logo"
           class="logo" />
       </div>
     </section>
