center the shit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
     <section class="container">
       <div class="board-item">
-        <div class="questionBox board-item-content">
+        <div class="questionBox question-content">
           <span> Click the New Question button to play!</span>
         </div>
       </div>
@@ -88,22 +88,22 @@
           <div class="column is-narrow">
             <article class="message is-info is-dark answerCards">
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="0">  </span> </div>
+                <div class="board-item-content" id="box"><div class="hidden answer" id="0">  </div> </div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="1">  </span></div>
+                <div class="board-item-content" id="box"><div class="hidden answer" id="1">  </div></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="2">  </span></div>
+                <div class="board-item-content" id="box"><div class="hidden answer" id="2">  </div></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="3"></span></div>
+                <div class="board-item-content" id="box"><div class="hidden answer" id="3"></div></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="4"></span></div>
+                <div class="board-item-content" id="box"><div class="hidden answer" id="4"></div></div>
               </div>
               <div class="board-item">
-                <div class="board-item-content" id="box"><span class="hidden answer" id="5"></span></div>
+                <div class="board-item-content" id="box"><div class="hidden answer" id="5"></div></div>
               </div>
             </article>
           </div>
